--- a/benji-client/src/pages/Dashboard/Dashboard.module.css
+++ b/benji-client/src/pages/Dashboard/Dashboard.module.css
@@ -13,7 +13,7 @@
   grid-template-areas:
     'srch srch'
     'info btns'
-    'que btns'
+    'que prev'
     'que prev'
     'ctrls prev';
 
@@ -23,7 +23,7 @@
   grid-template-rows: 1fr 1fr auto; */
   grid-template-columns: minmax(auto, 800px) auto;
   gap: 1em;
-  padding: 5% 2em;
+  padding: var(--margin-bottom) 2em;
 }
 
 .dashboard__component {
@@ -73,6 +73,5 @@
   grid-area: prev;
   width: fit-content;
   height: fit-content;
-  max-height: 100%;
   margin-top: auto;
 }
